<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">buddha</string>
    <string name="shouye">首页</string>
    <string name="jidiantang">祭奠堂</string>
    <string name="qifu">祈福</string>
    <string name="xiuxing">修行</string>
    <string name="foyou">佛友</string>
    <string name="mine">我的</string>
    <string name="next_step">下一步</string>

    <!--    善举-->
    <string name="shanjv_detail">详情内容</string>
    <string name="shanjv_list">参与列表</string>
    <string name="shanjv_comment_list">评论列表</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="go_to_top">回顶部</string>
    <string name="account_address">钱包地址:</string>
    <string name="account_balance">般弱钻余额:</string>
    <string name="pls_input_psw">请输入密码</string>

    <string name="cancel">取消</string>
    <string name="confirm">确认</string>

    <string name="login">导入钱包</string>
    <string name="not_login">暂无钱包</string>
    <string name="logout">删除钱包</string>
    <string name="open_wallet">打开钱包</string>

    <string name="normal">普通用户</string>
    <string name="fashi">法师</string>
    <string name="siyuan">寺院</string>
    <string name="jijinhui">基金会</string>

    <string name="no_approve">未认证</string>
    <string name="has_approve">已认证</string>

    <string name="comment">评价</string>

    <string name="share_title">分享佛系</string>
    <string name="submit">提交</string>

</resources>
