<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_menu_shouye"
        android:icon="@drawable/selector_icon_shouye"
        android:title="@string/shouye" />
    <item
        android:id="@+id/bottom_menu_qifu"
        android:icon="@drawable/selector_icon_qifu"
        android:title="@string/qifu"
        />
    <item
        android:id="@+id/bottom_menu_xiuxing"
        android:icon="@drawable/selector_icon_xiuxing"
        android:title="@string/xiuxing"/>
    <item
        android:id="@+id/bottom_menu_foyou"
        android:icon="@drawable/selector_icon_foyou"
        android:title="@string/foyou"/>
    <item
        android:id="@+id/bottom_menu_mine"
        android:icon="@drawable/selector_icon_mine"
        android:title="@string/mine"/>


</menu>