<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="188dp"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="188dp"
        android:layout_gravity="center"
        android:background="@drawable/tuoyuan_bg"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="1dp"
            android:padding="5dp"
            android:src="@mipmap/icon_close"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dialog_msg_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/pls_input_psw"
                    android:textColor="@color/color_text_level1"
                    android:textSize="17sp" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/dialog_edit_et"
                    style="@style/edittext_circle_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/pls_input_psw"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:textSize="@dimen/text_dimen_16" />

                <ImageView
                    android:id="@+id/iv_hide"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical|right"
                    android:padding="5dp"
                    android:src="@mipmap/icon_hide" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/base_error_color"
                android:textSize="13sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tuoyuan_bottom_left_bg"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/color_text_level2" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/btn_commit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tuoyuan_bottom_right_base_color_bg"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/color_white" />

            <FrameLayout
                android:id="@+id/view_loading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateDrawable="@drawable/base_loading_bg"
                    android:padding="8dp" />
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
